app/src/main/java/com/example/androidmvvm/core/error/Failure.kt
package com.example.androidmvvm.core.error

interface Failure